lab1/Test/L1-A-2-1.cmm
int ygcD_H0p51 ( int TN9CP2C_9_zKL9B [ 718140043 ] 
  [ 699448390 ] [ 1267009098 ] [ 861968495 ] , struct 
  qt uwc5ckjz [ ] , float ToxCDyctK0W6k1J56R4 , int 
  eNXhi9VxbVa4YKI2 ) {
}
struct waQ4fMOfYks5Tu xiIcvvvPonMlIQqBb ( {
  int Lh8W [ 370478482 ] [ 23643887 ] = - xtt4499weg3 
    = LqYp6b 
  float Crl6sE = WYGghLQfE , Wcc13lS4uT ;
  int bK7ZwfM73Cehmcx [ 1870064091 ] [ 1099555561 
    ] [ 155308459 ] = GjYO01goVar0sVC5 , dm9iskPq ;
  struct jguENOmi OF 
  if ( - ngZHFqw5ilG9J / IoCB / HcvoFNU / aAcYt6sdXi9BB0B21N3x 
    - qQv1aDbobGFQN6ZqDs - t4EV + EoLFtQhElQJGt4Fze - 
    KM18zq_E4 < uxhfNkFIfxOybim == ruXz0hRJP > zhtRF0VyP 
    > Q == wxtTHNt1fqO >= YkVyB <= yvD7Yp1ZP1Cmw1zK > 
    zrGsg1Lt58gR6n != wX4cCaOIH > CS1te_wvpgAZXahGzzk 
    < YBuPU7vQIKQiOh > trAVfKT || Wl || K5vOR5KpcLeC ) 
      hZikY4an5F2BQ0la ;
else   rjb ;

}
